# umrepositorio

./: manage.py  pyproject.toml
ficticio/: asgi.py  settings.py  urls.py  wsgi.py
