[tool.poetry]
name = "ficticio"
version = "0.1.0"
description = "Um exemplo"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
